# iree-template-compiler-cmake

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build-and-test.yml
hello_compiler/: CMakeLists.txt  hello_compiler.c
src/: CMakeLists.txt  InitAll.cpp  InitAll.h
src/Transforms/: CMakeLists.txt  PassDetail.h  Passes.cpp  Passes.h  Passes.td
tests/: simple_mul.mlir
tools/: CMakeLists.txt
tools/my-iree-opt/: CMakeLists.txt
